# jobrouter-app

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
front/: LICENSE  astro.config.mjs  package-lock.json  package.json
front/src/components/: App.tsx  Player.css  Player.tsx  Welcome.tsx  api.ts
front/src/layouts/: Layout.astro
front/src/pages/: index.astro
src/jobrouter_api/: main.py  models.py  schemas.py
