[tool.poetry]
name = "jobrouter-app"
version = "0.1.0"
description = ""
authors = ["Vladimir Klepov <vklepov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
ruff = "^0.0.291"

[tool.poetry.scripts]
dev = "jobrouter_api.main:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
