[tool.poetry]
name = "jobrouter-app"
version = "0.1.0"
description = ""
authors = ["Vladimir Klepov <vklepov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.2.2"
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
ruff = "^0.0.291"

[tool.poetry.scripts]
dev = "jobrouter_api.main:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
